# tigame

./: CMakeLists.txt  README.md
cmake/: FindPhysFS.cmake
demo/: CMakeLists.txt  main.cpp
editor/: CMakeLists.txt  editor_component.cpp  editor_component.hpp  main.cpp
glad/include/glad/: glad.h
glad/src/: glad.c
src/: camera.cpp  camera.hpp  component.hpp  game.cpp  game.hpp  input_manager.cpp  input_manager.hpp  main.cpp  material.cpp  material.hpp  mesh.cpp  mesh.hpp  mesh_factory.cpp  mesh_factory.hpp  object.cpp  object.hpp  orbit_component.cpp  orbit_component.hpp  scene.cpp  scene.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  vector.hpp
src/components/: orbit_component.cpp  orbit_controls.cpp  orbit_controls.hpp
